--- a/cheese-rescue-app/src/index.css
+++ b/cheese-rescue-app/src/index.css
@@ -1,38 +1,42 @@
 body {
-
-  background-image: url("./assets/img/inicio.jpg");
+  background-image: url("./assets/img/Cheese.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: cover;
-  background-color: black;
-  width: 1920px;
-  max-height: 1080px;
-
+  background-size: contain;
+  background-color: #fbea0b;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 /* Background para ancho máximo de la pantalla física */
 @media only screen and (max-device-width: 767px) {
   body {
-    background-image: url("./assets/img/inicio.jpg");
-    color: #FFF;
-    }
+    background-image: url("./assets/img/Cheese.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #fbea0b;
   }
-  /* Background para ancho máximo del navegador */
-  @media only screen and (max-width: 767px) {
+}
+/* Background para ancho máximo del navegador */
+@media only screen and (max-width: 767px) {
   body {
-    background-image: url("./assets/img/inicio.jpg");
-    color: #FFF;
-    }
-   }
+    background-image: url("./assets/img/Cheese.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #fbea0b;
+  }
+}
