--- a/cheese-rescue-app/src/app/components/Questions/UserName/UserName.component.scss
+++ b/cheese-rescue-app/src/app/components/Questions/UserName/UserName.component.scss
@@ -1,11 +1,15 @@
+$time-animation: 2.5s;
+
 .o-container-name {
   position: absolute;
   width: 100%;
   height: 100vh;
+  // background-color: azure;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 0;
 
   .o-container-form-name {
     position: absolute;
@@ -20,22 +24,49 @@
     align-items: center;
     transform: rotate(6deg);
 
+    -webkit-animation: backInLeft $time-animation 1; /* Safari 4+ */
+    -moz-animation: backInLeft $time-animation 1; /* Fx 5+ */
+    -o-animation: backInLeft $time-animation 1; /* Opera 12+ */
+    animation: backInLeft $time-animation 1; /* IE 10+, Fx 29+ */
+
     .o-form-control {
       width: 13rem;
+      height: 3rem;
       margin-top: 9rem;
       margin-left: 3rem;
       transform: rotate(-6deg);
+      border-radius: 0px;
+      padding-left: 0.3rem;
+      outline: none;
+      background-color: #ffe38991;
+      border: 0px;
+      border-bottom: 1px solid rgb(0, 0, 0); 
+      // box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
     }
 
     .o-btn-continue {
       width: 56%;
       height: 3rem;
-      margin-top: 3rem;
+      margin-top: 2rem;
       margin-left: 4rem;
       transform: rotate(-6deg);
-      background-color: #1ad5ee;
+      background-color: #fbea0b;
       border-color: black;
       border-radius: 8px;
+    }
+    @media only screen and (max-width: 950px) {
+      .o-form-control {
+        width: 10rem;
+        margin-top: 6.5rem;
+        margin-left: 2.4rem;
+        transform: rotate(-6deg);
+      }
+      .o-btn-continue {
+        height: 2.5rem;
+        margin-top: 1rem;
+        margin-left: 3.4rem;
+        transform: rotate(-6deg);
+      }
     }
   }
 
@@ -43,21 +74,6 @@
     .o-container-form-name {
       width: 16rem;
       height: 16rem;
-    }
-    .o-form-control {
-      width: 10rem;
-      margin-top: 7rem;
-      margin-left: 2.4rem;
-      transform: rotate(-6deg);
-    }
-    .o-btn-continue {
-      height: 2rem;
-      margin-top: 1.5rem;
-      margin-left: 3.4rem;
-      transform: rotate(-6deg);
-      background-color: #1ad5ee;
-      border-color: black;
-      border-radius: 8px;
     }
   }
 }
