--- a/cheese-rescue-app/src/app/components/Player/VideoPlayer/VideoPlayer.component.scss
+++ b/cheese-rescue-app/src/app/components/Player/VideoPlayer/VideoPlayer.component.scss
@@ -1,13 +1,10 @@
-.player-wrapper {
-//   position: relative;
-//   padding-top: 56.25%; /* Player ratio: 100 / (1280 / 720) */
-
-}
 
 .react-player {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  // height: 100vh;
+  // width: 100vw;
   z-index: -1;
   // width: 100%;
   // max-height: 100%;
