interfaz del inicio mejorada con sus animaciones

--- a/cheese-rescue-app/src/app/components/Home/ButtonStart/ButtonStart.component.scss
+++ b/cheese-rescue-app/src/app/components/Home/ButtonStart/ButtonStart.component.scss
@@ -1,10 +1,10 @@
 .o-btn-start {
-  background: #07b4d3a6;
+  background: #0599be;
   border-radius: 50%;
   width: 10rem;
   height: 10rem;
   outline: none;
-  margin-top: 10rem;
+  // margin-top: 10rem;
   border-color: rgb(255, 255, 255);
   color: #ffffff;
   animation: Button-start-spin infinite 2s ease-out;
