--- a/cheese-rescue-app/src/app/pages/HomePage/Home.page.scss
+++ b/cheese-rescue-app/src/app/pages/HomePage/Home.page.scss
@@ -29,18 +29,39 @@
 
 .o-container-start {
   display: flex;
-  flex-direction: column;
+  width: 100%;
   height: 100vh;
   justify-content: center;
   align-items: center;
-  margin-top: -1rem;
 
-  .o-text-jugar {
-    font-weight: bold;
-    padding: 1.1rem;
-    font-size: 5rem;
-    color: #07b4d3;
-    -webkit-text-stroke: 3px rgb(255, 255, 255); /* width and color */
+  .o-content-start {
+    background-color: #131313e3;
+    width: 22rem;
+    height: 23rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+
+    .o-text-jugar {
+      font-weight: bold;
+      padding: 0;
+      margin-top: 1rem;
+      font-size: 5rem;
+      color: #ffffff;
+      -webkit-text-stroke: 3px rgb(255, 255, 255); /* width and color */
+
+      -webkit-animation: rollIn 2s 1; /* Safari 4+ */
+      -moz-animation: rollIn 2s 1; /* Fx 5+ */
+      -o-animation: rollIn 2s 1; /* Opera 12+ */
+      animation: rollIn 2s 1; /* IE 10+, Fx 29+ */
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    .o-content-start {
+      width: 95%;
+    }
   }
 }
-
