--- a/cheese-rescue-app/src/index.css
+++ b/cheese-rescue-app/src/index.css
@@ -1,9 +1,9 @@
 body {
-  background-image: url("./assets/img/Cheese.jpg");
+  background-image: url("./assets/img/inicio.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: contain;
+  background-size: cover;
   background-color: #fbea0b;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -21,7 +21,7 @@ code {
 /* Background para ancho máximo de la pantalla física */
 @media only screen and (max-device-width: 767px) {
   body {
-    background-image: url("./assets/img/Cheese.jpg");
+    background-image: url("./assets/img/inicio.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -32,7 +32,7 @@ code {
 /* Background para ancho máximo del navegador */
 @media only screen and (max-width: 767px) {
   body {
-    background-image: url("./assets/img/Cheese.jpg");
+    background-image: url("./assets/img/inicio.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
