ajustando el slider de intrucciones

--- a/cheese-rescue-app/src/app/components/Player/ButtonPlay/ButtonPlayPause.component.scss
+++ b/cheese-rescue-app/src/app/components/Player/ButtonPlay/ButtonPlayPause.component.scss
@@ -8,7 +8,7 @@
   border-radius: 50%;
   width: 3.9rem;
   height: 3.9rem;
-  background: #fbea0b;
+  background: #ffe600;
   outline: none;
   cursor: pointer;
 
