--- a/cheese-rescue-app/src/app/components/Player/ButtonSeek/ButtonSeek.component.scss
+++ b/cheese-rescue-app/src/app/components/Player/ButtonSeek/ButtonSeek.component.scss
@@ -8,7 +8,7 @@
   border-radius: 50%;
   width: 2.7rem;
   height: 2.7rem;
-  background: #fbea0b;
+  background: #ffe600;
   outline: none;
   cursor: pointer;
 
