--- a/cheese-rescue-app/src/app/components/Player/VideoPlayer/VideoPlayer.component.scss
+++ b/cheese-rescue-app/src/app/components/Player/VideoPlayer/VideoPlayer.component.scss
@@ -1,11 +1,13 @@
+$time-animation: 3s;
 
 .react-player {
   position: fixed;
   top: 0;
   left: 0;
-  // height: 100vh;
-  // width: 100vw;
   z-index: -1;
-  // width: 100%;
-  // max-height: 100%;
+
+  -webkit-animation: fadeIn $time-animation 1; /* Safari 4+ */
+  -moz-animation: fadeIn $time-animation 1; /* Fx 5+ */
+  -o-animation: fadeIn $time-animation 1; /* Opera 12+ */
+  animation: fadeIn $time-animation 1; /* IE 10+, Fx 29+ */
 }
