--- a/cheese-rescue-app/src/app/components/Player/Loading/Loading.component.scss
+++ b/cheese-rescue-app/src/app/components/Player/Loading/Loading.component.scss
@@ -8,40 +8,10 @@
   // background-color: yellowgreen;
 
   .o-content-carousel {
-
     width: 30rem;
     height: 13rem;
     // background-color: #8e6daf;
     margin-bottom: 6rem;
-
-    .o-slide-carousel {
-
-      background-color: #3c0573;
-      border-radius: 12px;
-      border: 5px solid #ffffff;
-      // width: 100%;
-      height: 18rem;
-      padding: 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-
-      .o-container-icon {
-
-        position: absolute;
-        background-color: #ffffff;
-        padding: 0.5rem;
-        
-        border-radius: 12px;
-      }
-
-      .o-text-carousel {
-
-        color: #ffffff;
-        margin-top: 8rem;
-        font-size: 18px;
-      }
-    }
   }
 
   .o-content-loader {
@@ -50,18 +20,19 @@
     align-items: center;
     width: 20rem;
     height: 8rem;
-    background-color: #3c0573;
+    background-color: #ffe600;
     border-radius: 15px;
     border: 5px solid #ffffff;
 
     .o-loader {
-    //   margin-top: 1rem;
+      //   margin-top: 1rem;
       margin-left: 1rem;
     }
-    
+
     .o-text-loading {
-        color: #ffffff;
-        font-size: 34px;
+      color: #0a0a0a;
+      font-size: 34px;
+      letter-spacing: 0.5px;
     }
   }
 
@@ -74,5 +45,3 @@
     }
   }
 }
-
-
