--- a/cheese-rescue-app/src/app/pages/HomePage/Home.page.scss
+++ b/cheese-rescue-app/src/app/pages/HomePage/Home.page.scss
@@ -3,16 +3,6 @@
   src: url("../../../assets/fonts/MoonCheese-Regular.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 
-.o-layer-background {
-  position: absolute;
-  background-color: rgba(0, 20, 37, 0.2);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: -1;
-}
-
 .o-title-welcome {
   position: absolute;
   color: rgb(255, 255, 255);
@@ -35,7 +25,7 @@
   align-items: center;
 
   .o-content-start {
-    background-color: #131313e3;
+    background-color: #131313ee;
     width: 22rem;
     height: 23rem;
     display: flex;
@@ -57,11 +47,17 @@
       -o-animation: rollIn 2s 1; /* Opera 12+ */
       animation: rollIn 2s 1; /* IE 10+, Fx 29+ */
     }
+    @media only screen and (max-width: 767px) {
+      .o-text-jugar {
+        font-size: 3.6rem;
+      }
+    }
   }
 
   @media only screen and (max-width: 767px) {
     .o-content-start {
       width: 95%;
+      max-width: 22rem;
     }
   }
 }
